--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="js-backgroundTheme bodyContainer">
-    <header class="websiteName" id="home">Mieszcat Vanir</header>
+    <header class="websiteName" id="home">Mieszcat Vanir i Lola</header>
     <nav class="navBar">        
         <ul class="navBar__list">
             <li class="navBar__listItem navBar__listItem--imagine"><img width="40" height="40" src="images/ikona.jpg"
